# cacheflow

./: .gitignore  .gitlab-ci.yml  Dockerfile.base  INSTALL.md  Makefile  README.rst  draft.html  index.html  pipeline.yaml  pyproject.toml  setup.py
.github/workflows/: test.yml
cacheflow/: __init__.py  base.py  builtin_components.py  builtin_modules.py  cli.py  executor.py  json.py  literal.py  main.py  noteflow.py  python.py
cacheflow/cache/: __init__.py  base.py  core.py
cacheflow/storage/: actions.py  controller.py  json.py
cacheflow/web/: api.py  base.py  json.py  main.py
css/: app.1d048892.css  app.ef159ea1.css
examples/: data.csv  notebook.cfnb  pipeline.yaml
js/: app.1cdb6178.js  app.1cdb6178.js.map  app.91f41349.js  app.91f41349.js.map  chunk-vendors.1240edf8.js  chunk-vendors.1240edf8.js.map  chunk-vendors.f49862af.js  chunk-vendors.f49862af.js.map
tests/: __main__.py  test_executor.py  test_python.py
ui/: .eslintrc.js  .gitignore  package.json  vue.config.js
ui/public/: index.html
ui/src/: App.tsx  App.vue  utils.js  utils.ts  workflow.ts
ui/src/components/: Canvas.css  Canvas.tsx  Canvas.vue  Connection.css  Connection.tsx  Connection.vue  Library.vue  Port.css  Port.tsx  Port.vue  Step.css  Step.tsx  Step.vue  StepSvg.vue
